rest client changed